# PgnChess

./: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt
tests/pgn_files/: test.pgn
